--- a/estilos.css
+++ b/estilos.css
@@ -100,6 +100,16 @@ h1 {
 
 }
 
-button {
+#iniciar {
     background-color:#00E676;
+    padding: 10px;
+    
+}
+
+#pause, #play{
+    background-color: #121212;
+    position: absolute;
+    left: 450px;
+    top: 100px;
+    display: none;
 }
